# Jerry-Sheppardini

./: .gitignore  README.md  pyproject.toml
agent_terminal/: app.css  app.py  screens.py
agent_terminal/agents/: base.py  ollama_agent.py  openai_agent.py  voice_cloning_agent.py
agent_terminal/widgets/: agent_view.py  mascot.py
sopranos_cli/: main.py
test/: test_main.py
tests/: test_app.py  test_voice_cloning_agent.py
