[project]
name = "agent-terminal"
version = "0.1.0"
description = "A multi-agent terminal application for interacting with local and remote LLMs."
authors = [{ name = "Jules", email = "jules@agent.ai" }]
requires-python = ">=3.9"
dependencies = [
    "textual==0.66.0",
    "openai==1.30.1",
    "ollama==0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]